package aisafe.aircrafts.domain;

public enum Manufacturer {
    BOEING,
    AIRBUS,
    EMBRAER,
    BOMBARDIER,
    ATR,
    COMAC,
    SUKHOI,
    MITSUBISHI;
}
