package aisafe.model.enums;

public enum AircraftStatus {
    AVAILABLE,
    INACTIVE,
    UNDER_MAINTENANCE,
    IN_FLIGHT
}
