package aisafe.model.enums;

public enum AirportStatus {
    OPERATIONAL,
    UNDER_MAINTENANCE,
    CLOSED
}
