package aisafe.model.enums;

public enum ContactType {
    PHONE,
    EMAIL,
    FAX,
    OTHER
}
