package aisafe.model.enums;

public enum FlightStatus {
    SCHEDULED,
    DELAYED,
    IN_FLIGHT,
    COMPLETED,
    CANCELED

}
