package aisafe.model.enums;

public enum MaintenanceStatus {
    PLANNED,
    IN_PROGRESS,
    COMPLETED,
    CANCELED

}
