package aisafe.model.enums;

public enum MaintenanceType {
    INSPECTION,
    SCHEDULED_MAINTENANCE,
    OVERHAUL,
    MODIFICATION
}
