package aisafe.routes.domain;

public enum RouteStatus {
    ACTIVE,
    INACTIVE,
    SUSPENDED
}
