package aisafe.security.domain;

public enum Role {
    ADMIN,
    BACKOFFICE_OPERATOR,
    ATCC,
    MAINTENANCE_TECHNICIAN,
    MAINTENANCE_SUPERVISOR
}
